2006-06-13  David Hampton  <hampton@employees.org>

	* src/import-export/qif-import/druid-qif-import.c: Do a better job
	of turning the busy cursor on/off.  Now works correctly if there's
	a failure in the input file.

	* src/core-utils/gnc-glib-utils.[ch]:
	* src/core-utils/gw-core-utils-spec.scm:
	* src/import-export/qif-import/qif-file.scm:
	* src/import-export/ofx/gnc-ofx-import.c: Strip all invalid utf8
	characters from imported QIF and OFX/QFX strings.  This fixes bugs
	#106203 #338296 #344170 and #344219.  Long term gnucash should be
	enhanced to learn/remember the input encoding and automatically
	convert to utf8.

2006-06-13  Derek Atkins  <derek@ihtfp.com>

	* configure.in: force-enable hbci if the user enables mt940

2006-06-13  David Hampton  <hampton@employees.org>

	* src/quotes/gnc-fq-helper.in: Tell gnucash that a currency quote
	failed instead of just abandoning the request.  Fixes #344546.

2006-06-12  David Hampton  <hampton@employees.org>

	* src/engine/Account.c: When committing an account during the
	closing of a book, don't search the engine for splits that are in
	the process of being assigned to the account but aren't yet linked
	into the account.  This eliminates an O(n*m) operation that will
	never find any work to perform.  Fixes #344473.

	* src/quotes/gnc-fq-check.in: Quote the F::Q version number so
	that it will be correctly parsed as a string.

2006-06-09  David Hampton  <hampton@employees.org>

	* doc/examples/*.qif: Tell subversion these files are text.

	* src/doc/valgrind.txt:
	* src/doc/Makefile.am:
	* src/gnome-utils/ui/gnc-main-window-ui.xml:
	* src/gnome-utils/gnc-main-window.c:
	* configure.in: Move the valgrind reference code from a compiled
	file to a documentation file.  The start/stop valgrind command
	didn't work as well as I'd hoped. Fixes #344353.

2006-06-07  David Hampton  <hampton@employees.org>

	* src/business/business-gnome/business-gnome.scm: Restore the
	business reports menu.
